# AI-Job-Hunter

./: .env.example  .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  TODO.md  companies.yaml  docker-compose.qdrant.yml  package-lock.json  prompts.yaml  pyproject.toml  reactbits_content.json  reactbits_root.json  reactbits_src.json  scrape.py  setup_qdrant_local.ps1  setup_scheduler.ps1  stitch_tools_list.json
.claude/: settings.local.json
.kenji-handoff/: Kenji-print.html  Kenji.html  app.jsx  command.jsx  data.jsx  design.md  discover.jsx  resume.jsx  shell.jsx  stories.jsx  styles.css  ui.jsx
.playwright-cli/: page-2026-03-13T06-22-51-138Z.yml  page-2026-03-13T06-25-56-522Z.yml  page-2026-03-13T06-27-08-774Z.yml  page-2026-03-13T06-28-21-004Z.yml  page-2026-03-13T06-30-04-962Z.yml  page-2026-03-13T06-32-11-701Z.yml  page-2026-03-13T06-32-50-689Z.yml  page-2026-03-13T06-33-32-676Z.yml  page-2026-03-13T06-34-07-619Z.yml  page-2026-03-13T06-34-39-909Z.yml  page-2026-03-13T06-35-00-230Z.yml  page-2026-03-13T06-35-48-017Z.yml  page-2026-03-13T06-36-30-801Z.yml  page-2026-03-13T06-37-13-645Z.yml  page-2026-03-13T06-38-49-472Z.yml  page-2026-03-13T06-43-19-173Z.yml  page-2026-03-13T06-46-23-816Z.yml  page-2026-03-13T07-06-42-311Z.yml  page-2026-03-13T07-07-19-456Z.yml  page-2026-03-13T07-12-08-873Z.yml  page-2026-03-13T07-16-05-583Z.yml  page-2026-03-13T07-16-43-291Z.yml  page-2026-03-13T07-17-04-994Z.yml  page-2026-03-13T07-18-00-737Z.yml  page-2026-03-13T07-18-24-765Z.yml  page-2026-03-13T07-20-16-700Z.yml  page-2026-03-13T07-22-16-327Z.yml  page-2026-03-13T07-22-42-909Z.yml  page-2026-03-13T07-24-33-645Z.yml
assets/: recommended_page.html
config/: profile.example.yaml
docs/: INDEX.md  quickstart.md
eval/: README.md  dataset.yaml  eval.py  eval_analysis.ipynb  swarm_benchmark.py  swarm_dataset.yaml
examples/: jerry_data_scientist.txt
notebooks/: agents_test.ipynb  resume_ir_pdf_compare.ipynb  resume_ir_spike.ipynb
prompts/: agent_chat.yaml  ats_critique.yaml  cover_letter.yaml  cover_letter_draft_prompt.yaml  cover_letter_evidence_miner_prompt.yaml  cover_letter_jd_decomposer_prompt.yaml  cover_letter_narrative_planner_prompt.yaml  cover_letter_planner_prompt.yaml  cover_letter_rewriter_prompt.yaml  cover_letter_scoring_prompt.yaml  cover_letter_structured.yaml  interview_flow.yaml  jd_enrichment_prompt.yaml  jd_formatter_prompt.yaml  llm_screener.yaml  resume_evidence_miner_prompt.yaml  (+8 more)
(+337 files in other folders)
