[project]
name = "ai-job-hunter"
version = "3.0.0"
description = "Daily ML/AI/Data Science job scraper with SQLite storage and Telegram notifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "langchain-openai>=0.3.0",
    "markdown>=3.10",
    "pytest>=9.0.2",
    "redis>=6.4.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "ruff>=0.15.4",
    "uvicorn>=0.36.0",
    "xhtml2pdf>=0.2.17",
    "langchain>=1.2.13",
    "langchain-openrouter>=0.2.0",
    "dotenv>=0.9.9",
]

[tool.pytest.ini_options]
markers = [
    "live_network: opt-in tests that probe live public ATS endpoints",
]
