[project]
name = "ai-job-hunter"
version = "3.0.0"
description = "Daily ML/AI/Data Science job scraper with SQLite storage and Telegram notifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "langchain-openai>=0.3.0",
    "markdown>=3.10",
    "pytest>=9.0.2",
    "redis>=6.4.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "ruff>=0.15.4",
    "uvicorn>=0.36.0",
    "xhtml2pdf>=0.2.17",
    "langchain>=1.2.13",
    "langchain-openrouter>=0.2.0",
    "dotenv>=0.9.9",
    "cryptography>=42.0",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "fpdf2>=2.8.7",
    "markdown2>=2.5.5",
    "python-multipart>=0.0.9",
]

[project.scripts]
ai-job-hunter = "ai_job_hunter.cli:main"
ai-job-hunter-backend = "ai_job_hunter.dashboard.backend.main:run"
ai-job-hunter-worker = "ai_job_hunter.dashboard.backend.worker:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_job_hunter*"]

[tool.pytest.ini_options]
markers = [
    "live_network: opt-in tests that probe live public ATS endpoints",
]
